Placed Photo in CSS file

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <header>
-    <img src="Profile.jpeg" alt="Profile picture" class="circle" width="160px">
+    <img src="CSS/Profile.jpeg" alt="Profile picture" class="circle" width="160px">
     <h1>Kayla Olivo</h1>
     <h2 class="sub">Realtor</h2>
   </header>
