--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
 <!DOCTYPE html>
 <html>
+  <style>
+  @media (max-width: 600px) {
+    .container {
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    }
+  }
+  @media (max-width: 400px) {
+    .container {
+      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    }
+  }
+  </style>
 <head>
   <title>Kayla Olivo</title>
   <meta charset="utf-8" />
