--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav>
       <ul>
         <li><a href="#about">About</a></li>
-        <li><a href="#photos">Photos</a></li>
+        <li><a href="#listings">Listings</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
@@ -34,10 +34,19 @@
       <h2>About Me</h2>
       <p>Houston is the largest city in the state of Texas and the fourth-largest city in the United States. Located in the Gulf Coast region, Houston is home to a diverse population and a vibrant culture. The city is known for its energy industry, with many major oil and gas companies headquartered in the Houston area. It is also home to the Johnson Space Center, the mission control center for NASA's manned space flight program. Houston is a melting pot of cultures, with a large Hispanic population and a significant presence of Asian, African, and European communities. This diversity is reflected in the city's food scene, which boasts a wide range of cuisines from around the world. The city is also home to a thriving arts scene, with numerous museums, theaters, and galleries. The Museum District, located in the heart of Houston, is home to institutions such as the Menil Collection, the Museum of Fine Arts Houston, and the Houston Museum of Natural Science. Houston is a city of endless possibilities, with something for everyone. From world-class dining and shopping to outdoor adventures and cultural experiences, Houston has it all. So if you're looking for an exciting and dynamic place to visit or call home, consider Houston.</p>
     </section>
+
+    <section id="images">
+      <h2>Listings</h2>
+        <ul>
+          <li><img src="image1.jpeg"></li>
+          <li><img src="image2.jpeg"></li>
+          <li><img src="image3.jpeg"></li>
+        </ul>
+    </section>
   </main>
 
   <footer>
-    <p class="copyright_font">Copyright 2021 | Kayla Olivo</p>
+    <p class="copyright_font">Copyright 2022 | Kayla Olivo</p>
   </footer>
 </body>
 </html>
